# moochat

./: db.sqlite3  manage.py  pyproject.toml  render.yaml
moochat/: asgi.py  settings.py  urls.py  wsgi.py
render/templates/render/: index.html
